@@ -36,7 +36,7 @@ def rmgeneric(path, __func__):
 if not os.path.exists("mo/"):
 	os.mkdir("mo/")
 for lang in ('de', 'pl', 'ru', 'fr', 'zh_CN', 'sv', 'es', 'fi', 'uk', 'it', 'cs', \
-             'nl', 'pt_BR', 'da', 'be@latin', 'et', 'ca', 'ar'):
+             'nl', 'pt_BR', 'da', 'be@latin', 'et', 'ca', 'ar', 'tr'):
 	pofile = "po/" + lang + ".po"
 	mofile = "mo/" + lang + "/sonata.mo"
 	if not os.path.exists("mo/" + lang + "/"):
@@ -90,6 +90,7 @@ setup(name='Sonata',
                     ('share/locale/ar/LC_MESSAGES', ['mo/ar/sonata.mo']),
                     ('share/locale/pt_BR/LC_MESSAGES', ['mo/pt_BR/sonata.mo']),
                     ('share/locale/et/LC_MESSAGES', ['mo/et/sonata.mo']),
+                    ('share/locale/tr/LC_MESSAGES', ['mo/tr/sonata.mo']),
                     ('share/locale/be@latin/LC_MESSAGES', ['mo/be@latin/sonata.mo']),
                     ('share/locale/uk/LC_MESSAGES', ['mo/uk/sonata.mo'])],
         )
